...

    <string name="fingerprint_biometric_error_generic">An error has occurred with the fingerprint sensor.</string>
    <string name="fingerprint_biometric_error_too_many_attempts">Biometric authorization has been blocked due to too many attempts.</string>
    <string name="fingerprint_biometric_error_blocked">Biometric authorization has been blocked for 30 seconds.</string>
    <string name="fingerprint_biometric_changed_title">Fingerprint changes detected</string>
    <string name="fingerprint_biometric_changed_message">You have to sign in with passphrase this time and enable fingerprint in Settings again.</string>
    <string name="fingerprint_authenticate_again">Please sign in with passphrase again</string>

    <string name="settings_licenses_title">Licenses</string>
    <string name="settings_logs_title">Logs</string>

    <string name="resource_will_be_deleted">This will permanently remove this password from your account.</string>

...
