...
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_bottom_sheet_dialog"
    android:paddingBottom="@dimen/dp_24"
    tools:ignore="missingConstraints">

    <TextView
        android:id="@+id/title"
        style="@style/Heading2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/help_menu_help"
...
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_camera"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/enableLogsSwitch"
        style="@style/PasswordMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_enable_debug_logs"
        android:thumbTint="@color/selector_primary_switch"
...
        app:drawableStartCompat="@drawable/ic_bug"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whyScanQrCodes" />

    <TextView
        android:id="@+id/accessLogs"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_access_logs"
        app:drawableStartCompat="@drawable/ic_bug"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/enableLogsSwitch" />
...
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_import_file"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@id/importProfileManually" />

    <TextView
        android:id="@+id/visitHelpWebsite"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/help_menu_visit_help_website"
        app:drawableStartCompat="@drawable/ic_link"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@id/importAccountKit" />
...
